#501 first version of Bot API
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -53,6 +53,8 @@
         <module>test-base</module>
         <module>test</module>
 
+        <module>api</module>
+
         <module>admin</module>
 
 
