--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
-        <kotlin>1.3.31</kotlin>
+        <kotlin>1.3.41</kotlin>
 
         <slf4j>1.7.25</slf4j>
         <logback>1.2.3</logback>
@@ -45,25 +45,25 @@
         <jackson-module-loader>0.1.0</jackson-module-loader>
         <jackson-data>0.1.0</jackson-data>
         <jackson-generator>0.3.1</jackson-generator>
-        <klaxon>5.0.5</klaxon>
+        <klaxon>5.0.7</klaxon>
         <vertx>3.7.1</vertx>
-        <retrofit>2.5.0</retrofit>
-        <okhttp>3.14.1</okhttp>
+        <retrofit>2.6.0</retrofit>
+        <okhttp>3.14.2</okhttp>
         <okhttp-signpost>1.1.0</okhttp-signpost>
         <signpost-core>1.2.1.2</signpost-core>
-        <circuitbreaker>0.15.0</circuitbreaker>
-        <guava>27.1-jre</guava>
-        <google-auth>1.29.0</google-auth>
+        <circuitbreaker>0.16.0</circuitbreaker>
+        <guava>28.0-jre</guava>
+        <google-auth>1.30.1</google-auth>
         <jasypt>1.9.3</jasypt>
-        <commons-csv>1.6</commons-csv>
+        <commons-csv>1.7</commons-csv>
         <emoji>5.0</emoji>
         <commons-codec>1.12</commons-codec>
         <commons-lang>3.9</commons-lang>
         <json>20180813</json>
-        <httpclient>4.5.8</httpclient>
-        <google-auth2>0.16.1</google-auth2>
+        <httpclient>4.5.9</httpclient>
+        <google-auth2>0.16.2</google-auth2>
 
-        <junit-jupiter>5.4.0</junit-jupiter>
+        <junit-jupiter>5.5.0</junit-jupiter>
 
         <mockk>1.9.3</mockk>
         <assertj>3.12.2</assertj>
@@ -81,6 +81,7 @@
         <plugin.jar>3.1.2</plugin.jar>
         <plugin.ant>1.8</plugin.ant>
         <plugin.shade>3.2.1</plugin.shade>
+        <plugin.dependency>3.1.1</plugin.dependency>
 
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
 
@@ -674,6 +675,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
                     <version>${plugin.shade}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${plugin.dependency}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
