--- a/nlp/api/pom.xml
+++ b/nlp/api/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-nlp</artifactId>
-        <version>19.3.2-SNAPSHOT</version>
+        <version>19.3.2</version>
     </parent>
 
     <artifactId>tock-nlp-api</artifactId>
