--- a/translator/google-translate/pom.xml
+++ b/translator/google-translate/pom.xml
@@ -15,14 +15,13 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-translator</artifactId>
-        <version>19.3.2-SNAPSHOT</version>
+        <version>19.3.2</version>
     </parent>
 
     <artifactId>tock-translator-google</artifactId>
