--- a/bot/dialogflow/pom.xml
+++ b/bot/dialogflow/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>19.3.2</version>
+        <version>19.3.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-dialogflow</artifactId>
