--- a/nlp/front/pom.xml
+++ b/nlp/front/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-nlp</artifactId>
-        <version>19.3.2</version>
+        <version>19.3.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-front</artifactId>
