--- a/stt/pom.xml
+++ b/stt/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-root</artifactId>
-        <version>19.3.2</version>
+        <version>19.3.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-stt</artifactId>
