New documentation pages (fr)

--- a/docs-mk/fr/mkdocs.yml
+++ b/docs-mk/fr/mkdocs.yml
@@ -6,23 +6,43 @@ repo_name: 'tock'
 repo_url: 'https://github.com/voyages-sncf-technologies/tock'
 edit_uri: ''
 nav:
-  - 'Présentation': 'index.md'
-  - 'Pour commencer': 'pour-commencer.md'
-  - 'Construire le modèle': 'construire-le-modele.md'
-  - 'Evaluer la pertinence du modèle': 'evaluer-la-pertinence-du-modele.md'
-  - 'Développer un Assistant': 'developper-un-assistant.md'
-  - 'Assistant Tock':
-    - 'Présentation du Bot Open Data': 'presentation-du-bot-open-data.md'
-    - 'Développer': 'developper.md'
-    - 'Tester': 'tester.md'
-  -  'Assistant via API':
-     - 'Développer via API': 'developper-api.md'
-  - 'i18n': 'i18n.md'
-  - 'APIs de Tock': 'api.md'
-  - 'KDoc': 'kdoc.md'
-  - 'Contribuer au projet': 'contribuer.md'
-  - 'Installation de Tock': 'installation.md'
-  - 'Nous contacter': 'contact.md'
+  - 'Vue d`ensemble': 'index.md'
+  - 'Table des matières': 'toc.md'
+  - 'Découvrir Tock': # Guides / Découvrir
+      - 'Créer son premier bot': 'guide/studio.md'
+      - 'Configurer Slack': 'guide/slack.md'
+      - 'Configurer Messenger': 'guide/messenger.md'
+      - 'Programmer des parcours': 'guide/api.md'
+      - 'Déployer avec Docker': 'guide/plateforme.md'
+  - 'Utiliser Tock':
+      - 'Concepts': 'utilisateur/concepts.md'
+      - 'Tock Studio': 'utilisateur/studio.md'
+      - 'Bot multicanal': 'utilisateur/canaux.md'
+      - 'Bot multilingue': 'utilisateur/i18n.md'
+  - 'Développer avec Tock':
+      - 'Modes disponibles': 'dev/modes.md'
+      - 'Tock Bot API': 'dev/bot-api.md'
+      - 'Tock Bot intégré': 'dev/bot-integre.md'
+      - 'Connecteurs': 'dev/connecteurs.md'
+      - 'i18n': 'dev/i18n.md'
+      - 'Liste des APIs': 'dev/api.md'
+      - 'Exemples de code': 'dev/exemples-code.md'
+  - 'Administrer Tock':
+      - 'Architecture': 'admin/architecture.md'
+      - 'Installation': 'admin/installation.md'
+      - 'Sécurité': 'admin/securite.md'
+      - 'Disponibilité': 'admin/disponibilite.md'
+      - 'Supervision': 'admin/supervision.md'
+      - 'Cloud': 'admin/cloud.md'
+  - 'A propos':
+      - 'Pourquoi Tock': 'apropos/pourquoi.md'
+      - 'Vitrine utilisateurs': 'apropos/vitrine.md'
+      - 'Ressources': 'apropos/ressources.md'
+      - 'Nous contacter': 'apropos/contact.md'
+      - 'Communauté': 'apropos/communaute.md'
+      - 'Contribuer': 'apropos/contribuer.md'
+      - 'Emploi': 'apropos/emploi.md'
+
 theme:
   name: 'material'
   language: 'fr'
