--- a/bot/connector-whatsapp/pom.xml
+++ b/bot/connector-whatsapp/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>mockk</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-stt-google-speech</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
