fixes #534 bot demo: listen same configuration names
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/api/service/pom.xml
+++ b/bot/api/service/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>bot-toolkit</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test-junit5</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
