resolves #531: dictionary entity improvements: upload/download & minimum distance algorithm
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/core/service/pom.xml
+++ b/nlp/core/service/pom.xml
@@ -37,6 +37,10 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-nlp-model-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.mpkorstanje</groupId>
+            <artifactId>simmetrics-core</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
