--- a/bot/toolkit/pom.xml
+++ b/bot/toolkit/pom.xml
@@ -70,6 +70,10 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-bot-connector-businesschat</artifactId>
         </dependency>
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-bot-connector-web</artifactId>
+        </dependency>
 
         <!-- force okhttp dependencies -->
         <dependency>
