update components & setup nlu tock studio
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -24,54 +24,54 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
-    "angular-file-saver": "^1.1.3",
-    "chart.js": "^2.7.1",
-    "core-js": "^2.5.4",
-    "cytoscape": "^3.2.0",
-    "cytoscape-cose-bilkent": "^4.0.0",
-    "cytoscape-dagre": "^2.2.2",
-    "cytoscape-cola": "^2.3.0",
-    "cytoscape-elk": "^1.1.10",
-    "hammerjs": "^2.0.8",
-    "ng2-charts": "^1.6.0",
-    "ng2-file-upload": "^1.3.0",
-    "ngx-infinite-scroll": "^6.0.1",
-    "ngx-moment": "^3.1.0",
-    "rxjs": "6.5.2",
-    "rxjs-tslint": "^0.1.5",
-    "zone.js": "~0.9.1",
-    "@nebular/theme": "4.1.2",
     "@nebular/eva-icons": "4.1.2",
-    "nebular-icons": "1.1.0",
+    "@nebular/theme": "4.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "angular-file-saver": "^1.1.3",
     "bootstrap": "4.3.1",
+    "chart.js": "^2.7.1",
     "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
+    "core-js": "^2.5.4",
+    "cytoscape": "^3.10.0",
+    "cytoscape-cola": "^2.3.0",
+    "cytoscape-cose-bilkent": "^4.0.0",
+    "cytoscape-dagre": "^2.2.2",
+    "cytoscape-elk": "^1.1.10",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.0",
+    "hammerjs": "^2.0.8",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
+    "nebular-icons": "1.1.0",
+    "ng2-charts": "^1.6.0",
     "ng2-ckeditor": "^1.2.3",
-    "ng2-smart-table": "1.5.0",
     "ng2-completer": "^3.0.2",
+    "ng2-file-upload": "^1.3.0",
+    "ng2-smart-table": "1.5.0",
     "ngx-echarts": "^4.0.1",
+    "ngx-infinite-scroll": "^6.0.1",
+    "ngx-moment": "^3.1.0",
+    "node-sass": "^4.12.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
+    "rxjs": "6.5.2",
     "rxjs-compat": "6.3.0",
+    "rxjs-tslint": "^0.1.5",
     "socicon": "3.0.5",
     "tinymce": "4.5.7",
     "tslib": "^1.9.0",
     "typeface-exo": "0.0.22",
     "web-animations-js": "2.2.5",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
-    "node-sass": "^4.12.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.2",
-    "@angular/cli": "^8.1.2",
-    "@angular/compiler-cli": "^8.0.0",
-    "@angular/language-service": "^8.0.0",
+    "@angular/cli": "^8.3.3",
+    "@angular/compiler-cli": "^8.2.4",
+    "@angular/language-service": "^8.2.4",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -80,13 +80,13 @@
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "stylelint": "7.13.0",
     "ts-node": "3.2.2",
-    "tslint": "^5.7.0",
+    "tslint": "^5.19.0",
     "tslint-language-service": "^0.9.9",
     "typescript": "3.4.5"
   }
