--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -14,26 +14,26 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
-    "@angular/animations": "^8.0.0",
+    "@angular/animations": "^8.2.5",
     "@angular/cdk": "^8.0.0",
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
+    "@angular/common": "^8.2.5",
+    "@angular/compiler": "^8.2.5",
+    "@angular/core": "^8.2.5",
+    "@angular/forms": "^8.2.5",
     "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "@nebular/eva-icons": "4.1.2",
-    "@nebular/theme": "4.1.2",
+    "@angular/platform-browser": "^8.2.5",
+    "@angular/platform-browser-dynamic": "^8.2.5",
+    "@angular/router": "^8.2.5",
+    "@nebular/eva-icons": "4.2.1",
+    "@nebular/theme": "4.2.1",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "angular-file-saver": "^1.1.3",
     "bootstrap": "4.3.1",
     "chart.js": "^2.7.1",
-    "ckeditor": "4.7.3",
+    "ckeditor": "^4.12.1",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.5.4",
-    "cytoscape": "^3.10.0",
+    "cytoscape": "^3.2.0",
     "cytoscape-cola": "^2.3.0",
     "cytoscape-cose-bilkent": "^4.0.0",
     "cytoscape-dagre": "^2.2.2",
@@ -44,6 +44,7 @@
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
+    "material-design-icons-iconfont": "^5.0.1",
     "nebular-icons": "1.1.0",
     "ng2-charts": "^1.6.0",
     "ng2-ckeditor": "^1.2.3",
