--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -14,64 +14,65 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
-    "@angular/animations": "^8.0.0",
+    "@angular/animations": "^8.2.5",
     "@angular/cdk": "^8.0.0",
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
+    "@angular/common": "^8.2.5",
+    "@angular/compiler": "^8.2.5",
+    "@angular/core": "^8.2.5",
+    "@angular/forms": "^8.2.5",
     "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
+    "@angular/platform-browser": "^8.2.5",
+    "@angular/platform-browser-dynamic": "^8.2.5",
+    "@angular/router": "^8.2.5",
+    "@nebular/eva-icons": "4.2.1",
+    "@nebular/theme": "4.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "angular-file-saver": "^1.1.3",
+    "bootstrap": "4.3.1",
     "chart.js": "^2.7.1",
+    "ckeditor": "^4.12.1",
+    "classlist.js": "1.1.20150312",
     "core-js": "^2.5.4",
     "cytoscape": "^3.2.0",
+    "cytoscape-cola": "^2.3.0",
     "cytoscape-cose-bilkent": "^4.0.0",
     "cytoscape-dagre": "^2.2.2",
-    "cytoscape-cola": "^2.3.0",
     "cytoscape-elk": "^1.1.10",
-    "hammerjs": "^2.0.8",
-    "ng2-charts": "^1.6.0",
-    "ng2-file-upload": "^1.3.0",
-    "ngx-infinite-scroll": "^6.0.1",
-    "ngx-moment": "^3.1.0",
-    "rxjs": "6.5.2",
-    "rxjs-tslint": "^0.1.5",
-    "zone.js": "~0.9.1",
-    "@nebular/theme": "4.1.2",
-    "@nebular/eva-icons": "4.1.2",
-    "nebular-icons": "1.1.0",
-    "bootstrap": "4.3.1",
-    "ckeditor": "4.7.3",
-    "classlist.js": "1.1.20150312",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.0",
+    "hammerjs": "^2.0.8",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
+    "material-design-icons-iconfont": "^5.0.1",
+    "nebular-icons": "1.1.0",
+    "ng2-charts": "^1.6.0",
     "ng2-ckeditor": "^1.2.3",
-    "ng2-smart-table": "1.5.0",
     "ng2-completer": "^3.0.2",
+    "ng2-file-upload": "^1.3.0",
+    "ng2-smart-table": "1.5.0",
     "ngx-echarts": "^4.0.1",
+    "ngx-infinite-scroll": "^6.0.1",
+    "ngx-moment": "^3.1.0",
+    "node-sass": "^4.12.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
+    "rxjs": "6.5.2",
     "rxjs-compat": "6.3.0",
+    "rxjs-tslint": "^0.1.5",
     "socicon": "3.0.5",
     "tinymce": "4.5.7",
     "tslib": "^1.9.0",
     "typeface-exo": "0.0.22",
     "web-animations-js": "2.2.5",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
-    "node-sass": "^4.12.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.2",
     "@angular/cli": "^8.3.3",
-    "@angular/compiler-cli": "^8.2.4",
-    "@angular/language-service": "^8.2.4",
+    "@angular/compiler-cli": "^8.2.5",
+    "@angular/language-service": "^8.2.5",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
