travis: add -q option to reduce log level
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
 branches:
   only:
   - master
-script: mvn test -B -Dskip.npm -Dassembly.skipAssembly=true -U
+script: mvn test -B -Dskip.npm -Dassembly.skipAssembly=true -U -q
 cache:
   directories:
   - $HOME/.m2/repository
