--- a/pom.xml
+++ b/pom.xml
@@ -303,6 +303,10 @@
                         <groupId>org.jetbrains.kotlin</groupId>
                         <artifactId>kotlin-test-junit</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-simple</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
 
