fixes okhttp transitive dependencies
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/kotlin-compiler/client/pom.xml
+++ b/bot/admin/kotlin-compiler/client/pom.xml
@@ -42,6 +42,14 @@
             <artifactId>retrofit</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>converter-jackson</artifactId>
         </dependency>
