Doc: translate About section (en)

--- a/docs-mk/en/mkdocs.yml
+++ b/docs-mk/en/mkdocs.yml
@@ -35,13 +35,13 @@ nav:
       - 'Monitoring': 'admin/monitoring.md'
       - 'Cloud': 'admin/cloud.md'
   - 'About':
-      - 'Why Tock': 'apropos/why.md'
-      - 'Showcase': 'apropos/vitrine.md'
-      - 'Resources': 'apropos/ressources.md'
-      - 'Contact us': 'apropos/contact.md'
-      - 'Community': 'apropos/community.md'
-      - 'Contribute': 'apropos/contribute.md'
-      - 'Jobs': 'apropos/jobs.md'
+      - 'Why Tock': 'about/why.md'
+      - 'Showcase': 'about/showcase.md'
+      - 'Resources': 'about/resources.md'
+      - 'Contact us': 'about/contact.md'
+      - 'Community': 'about/community.md'
+      - 'Contribute': 'about/contribute.md'
+      - 'Jobs': 'about/jobs.md'
 theme:
   name: 'material'
   logo: 'assets/images/logo.svg'
