add milestone builds
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/pom.xml
+++ b/bot/admin/web/pom.xml
@@ -131,6 +131,9 @@
               <directory>dist</directory>
             </fileset>
             <fileset>
+              <directory>node</directory>
+            </fileset>
+            <fileset>
               <directory>src/app</directory>
               <includes>
                 <include>applications</include>
