--- a/nlp/admin/web/pom.xml
+++ b/nlp/admin/web/pom.xml
@@ -94,6 +94,9 @@
             <fileset>
               <directory>dist</directory>
             </fileset>
+            <fileset>
+              <directory>node</directory>
+            </fileset>
           </filesets>
         </configuration>
       </plugin>
