--- a/pom.xml
+++ b/pom.xml
@@ -626,17 +626,6 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>${plugin.nexus-staging}</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>${plugin.gpg}</version>
@@ -734,7 +723,7 @@
         <connection>scm:git:git@github.com:voyages-sncf-technologies/tock.git</connection>
         <developerConnection>scm:git:git@github.com:voyages-sncf-technologies/tock.git</developerConnection>
         <url>git@github.com:voyages-sncf-technologies/tock.git</url>
-        <tag>tock-0.2.10-SNAPSHOT</tag>
+        <tag>tock-${project.version}</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
@@ -783,6 +772,21 @@
             <properties>
                 <gpg.skip>false</gpg.skip>
             </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>${plugin.nexus-staging}</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>ossrh</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>travis-deploy</id>
@@ -795,6 +799,39 @@
                 <gpg.skip>false</gpg.skip>
                 <skip.npm>true</skip.npm>
             </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>${plugin.nexus-staging}</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>ossrh</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>milestone</id>
+            <activation>
+                <property>
+                    <name>milestone</name>
+                </property>
+            </activation>
+            <properties>
+                <gpg.skip>false</gpg.skip>
+            </properties>
+            <distributionManagement>
+                <repository>
+                    <id>bintray-tock</id>
+                    <name>tock-build</name>
+                    <url>https://api.bintray.com/maven/tock/tock/tock/;publish=1</url>
+                </repository>
+            </distributionManagement>
         </profile>
     </profiles>
 
