--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
         <plugin.ant>1.8</plugin.ant>
         <plugin.shade>3.2.1</plugin.shade>
         <plugin.dependency>3.1.1</plugin.dependency>
+        <plugin.deploy>3.0.0-M1</plugin.deploy>
 
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
 
@@ -693,6 +694,14 @@
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>${plugin.dependency}</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>${plugin.deploy}</version>
+                    <configuration>
+                        <retryFailedDeploymentCount>5</retryFailedDeploymentCount>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -829,7 +838,7 @@
                 <repository>
                     <id>bintray-tock</id>
                     <name>tock-build</name>
-                    <url>https://api.bintray.com/maven/tock/tock/tock/;publish=1</url>
+                    <url>https://api.bintray.com/maven/tock/tock/tock/;publish=1;override=1</url>
                 </repository>
             </distributionManagement>
         </profile>
