--- a/nlp/admin/web/pom.xml
+++ b/nlp/admin/web/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>fr.vsct.tock</groupId>
     <artifactId>tock-nlp-admin</artifactId>
-    <version>19.3.4-SNAPSHOT</version>
+    <version>19.3.4</version>
   </parent>
 
   <artifactId>tock-nlp-admin-web</artifactId>
