--- a/stt/core/pom.xml
+++ b/stt/core/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-stt</artifactId>
-        <version>19.3.4-SNAPSHOT</version>
+        <version>19.3.4</version>
     </parent>
 
     <artifactId>tock-stt-core</artifactId>
