--- a/bot/connector-teams/pom.xml
+++ b/bot/connector-teams/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>19.3.4-SNAPSHOT</version>
+        <version>19.3.4</version>
     </parent>
 
     <artifactId>tock-bot-connector-teams</artifactId>
