--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>fr.vsct.tock</groupId>
     <artifactId>tock-root</artifactId>
-    <version>19.3.4-SNAPSHOT</version>
+    <version>19.3.4</version>
     <packaging>pom</packaging>
     <name>Tock</name>
     <description>Tock, The Open Conversation Kit</description>
@@ -731,7 +731,7 @@
         <connection>scm:git:git@github.com:voyages-sncf-technologies/tock.git</connection>
         <developerConnection>scm:git:git@github.com:voyages-sncf-technologies/tock.git</developerConnection>
         <url>git@github.com:voyages-sncf-technologies/tock.git</url>
-        <tag>tock-${project.version}</tag>
+        <tag>tock-19.3.4</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
