--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -19,9 +19,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>fr.vsct.tock</groupId>
+        <groupId>ai.tock</groupId>
         <artifactId>tock-root</artifactId>
-        <version>19.3.5-SNAPSHOT</version>
+        <version>19.9.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-bot</artifactId>
@@ -64,77 +64,77 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-engine-jackson</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>bot-toolkit-base</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-connector-messenger</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-connector-ga</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-connector-alexa</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-connector-rest</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-connector-rest-client</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-connector-slack</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-connector-twitter</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-connector-rocketchat</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-connector-whatsapp</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-connector-teams</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-connector-web</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-storage-mongo</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>fr.vsct.tock</groupId>
+                <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-connector-businesschat</artifactId>
                 <version>${project.version}</version>
             </dependency>
